ctdb/common/logging.c
@@ -501,6 +501,8 @@ int logging_init(TALLOC_CTX *mem_ctx, const char *logging,
 	char *str, *name, *option;
 	int ret, i;
 
+	setup_logging(app_name, DEBUG_STDERR);
+
 	if (debug_level == NULL) {
 		debug_level = getenv("CTDB_DEBUGLEVEL");
 	}
